# ChangeLog for www-servers/tornado
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/tornado/ChangeLog,v 1.42 2014/03/08 01:34:43 yac Exp $

*tornado-3.1.1-r1 (08 Mar 2014)

  08 Mar 2014; Jan Matejka <yac@gentoo.org>
  +files/tornado-3.1.1-py2_6-tests-fix.patch,
  +files/unittest2-import-issue-1005.patch, +tornado-3.1.1-r1.ebuild:
  fixes bgo#486746

  16 Feb 2014; Mike Frysinger <vapier@gentoo.org> tornado-3.1.1.ebuild:
  Mark arm stable.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> tornado-3.1.1.ebuild:
  x86 stable, bug #488738

  29 Nov 2013; Pacho Ramos <pacho@gentoo.org> tornado-3.1.1.ebuild:
  amd64 stable, bug #488738

*tornado-3.1.1 (28 Sep 2013)

  28 Sep 2013; Kacper Kowalik <xarthisius@gentoo.org> +tornado-3.1.1.ebuild,
  tornado-2.4-r1.ebuild:
  Version bump, fixes #473574 by Dirkjan Ochtman <djc@gentoo.org>

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> tornado-2.4-r1.ebuild,
  tornado-2.4.1.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> tornado-2.4-r1.ebuild,
  tornado-2.4.1.ebuild:
  Drop stale conditionals after py2.5 removal.

  20 May 2013; Michał Górny <mgorny@gentoo.org> tornado-2.4-r1.ebuild,
  tornado-2.4.1.ebuild:
  Add missing || to PYTHON_USEDEP. Bug #469258.

*tornado-2.4.1 (09 May 2013)

  09 May 2013; Ian Delaney <idella4@gentoo.org> +tornado-2.4.1.ebuild:
  bump

  30 Mar 2013; Mike Gilbert <floppym@gentoo.org> tornado-2.4-r1.ebuild:
  Quote patterns for python_gen_usedep.

  11 Feb 2013; Michał Górny <mgorny@gentoo.org> tornado-2.4-r1.ebuild:
  Disable Python3 due to segfaults.

*tornado-2.4-r1 (05 Feb 2013)

  05 Feb 2013; Michał Górny <mgorny@gentoo.org> +tornado-2.4-r1.ebuild:
  Migrate to distutils-r1.

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> tornado-2.4.ebuild:
  Stable for x86, wrt bug #449428

  31 Dec 2012; Agostino Sarubbo <ago@gentoo.org> tornado-2.4.ebuild: