@@ -7,22 +7,24 @@ DIST tornado-2.2.1.tar.gz 330509 SHA256 466fea7696457be3d7b9c9a97c16011f09887883
 DIST tornado-2.4.1.tar.gz 348198 SHA256 14d392cf14698eba75b9299748fa83716f7c02fc49684dfc5011668c30ba6b00 SHA512 a33260ada089850c111ca2d3aa06a51b58bf4f64f1de97d7421a3a6ee068501f9593d6775a4a4c5aeb1c020eb5614df97d0a508e2937a75307585777189a6b85 WHIRLPOOL 39ddce965687b69ab57f9460c7b1f59ad99c1e3edc533553a72e31c357b19ecd8967eceffbb96b0146e8b4451a029ce61a7e8c0343965062257b042ec82db418
 DIST tornado-2.4.tar.gz 347522 SHA256 154f69547fd4731f3472b4094055567c3836b2af613068499cc6d09c2333ffbf SHA512 8da1c98d179ed221b5e432e2a7c59084d09072ac5884b5889cb3482ad36d54a801da15ae06ed543efe5733aea8364af49fbf1d64868fe4cb1d2592aae0673205 WHIRLPOOL 2e6f12c1af8322cb9eb6ffeff008fba6477cf62aa3f38d61df8780f84c494a8699b1ccea2157a79277b00406be17c58d75831d78f664f8bef11f94bbeae8ccd8
 DIST tornado-3.1.1.tar.gz 374086 SHA256 345904bfe4a0ce5d687203f783986a73cfd7dc3a9957ee3342cd43d4e310fdc6 SHA512 13f17166153a89ecf1a16a08f0d15cd342f5de7ad964e669e015c2226e2c18297306f47ffc560164ec9f8080489a5fb81cbf6b41f89f12fe1745b0cd73524207 WHIRLPOOL 689f4ba4dc4d98ac7b7de33b15288aa90683bc529364b02c0d5d1c9090b47c5178ef520cdcc93ae94e8886278cc4a16100c167e33a05f406c9431f4a0888087b
+DIST tornado-3.2.tar.gz 400403 SHA256 c8c2949c8d42af781437e356978f00a42b16a090612573cd7385c62451a00c2b SHA512 634b721743aa6805a1216fd79dfe91b9d2fdbcf49054ee36a188de080821659d84bdb9db861fc30c66f1a71b9f1483d972c3aa8806157777a982adf99351a751 WHIRLPOOL 083b5a423eeaafbc96dfc5539953d9dcbfe909e7b03879c0972355df2b11dd36570b4e481dd1015d7a9ee5a3a6ea757c51596b41262d9cf6844881f30d79a4cb
 EBUILD tornado-2.2.1.ebuild 854 SHA256 d0f3353d847c391b9197ce772e97ba9e15e5461cf38579bcefd3083e3cbdede8 SHA512 a3129225371393ee1921e83ce5a77e616169ff0aefbe582418c3e5a861f282ef1f71164d6f8d2570da7cf7f54a391af1c703b393b131013b960f2c8410ad3aff WHIRLPOOL d257360453916fb11c13821ae2e9bd67002a8d93d20d3cf59464453961798fd304626a30b3e4ffc6c5d70d316f173504609b8bb1dfdd47a77f936a73170e2f07
 EBUILD tornado-2.4-r1.ebuild 1183 SHA256 f01f7d89f3b90839d0d79dba6383c2b3e71839b5cf197483b19b4e2296bf85e6 SHA512 1241fd6ff3d59d0c62240cae6dbb200a3e0b5b5648177b674751bf0bd28d38d065d147405656512c63a437752873170649114546debcaed57d2934c46f25a263 WHIRLPOOL 4614a5827b3fd5df384577cdff826079c828f1e65b1384344caa8720a326526f5d26f3710d4f390eb55dca2973694442ed5133dd01d72ce0fe5154eafb830ccd
 EBUILD tornado-2.4.1.ebuild 1182 SHA256 e654955dd5670964fac70e7e8c0670059ae6189932541bd79562cd0072f19c78 SHA512 d0a7fb6c6f20143d1a6f2be4e3bc787a5a647e574c3e3c2830ab7acc500ed291b7bbf7fcd0a8ba136775808f364da243c5ba20b8990985f47a2c15d872f7afa3 WHIRLPOOL 54e128b574be4c695204c446d8e6f7265fe8d23dd53a6c83b9b034878b6322194f681f5ea88c74c19af51bf720c898757e2594ca04ae23d5bcf1a070603d303f
 EBUILD tornado-2.4.ebuild 951 SHA256 ef7470ad841f08c6048139e1c8faa472fd32913da5ec4ec6f0cb129014fa3e0a SHA512 31ad5b6f33477bfc333be9afeb2edba2e5ea4f4e0d94cef5510e9158f7fa0bf9418d00f61bd8c8f3188f52c6c8e81f0ab9c932cf78df4491375bbeb7b65eef6b WHIRLPOOL 067ae6af004e56a33f5b9e866da390d9b8815de912c0a536adef267c32d64d35439ff2ca0a66347539e0151a00092c1f7687b3cd75f145adeca772355507b291
 EBUILD tornado-3.1.1-r1.ebuild 1558 SHA256 3647e611cef1fc35b66ab3914fe0dd29b4c205a698dfdd8726020b287c3ea218 SHA512 554cd28fa8d9b7b60be6e67dcff55630dcfd3ce8720cf9dbf40ccca95c63e6235bbdcbb0ca71e3715840b5a4d0b934196a077f29e79bc2f555b9e89fd2b3a2de WHIRLPOOL 75a3a6c5cc8c0ee95a30de3ef2ae3318c0884eaff725d08ecf2e04238901121015e95f35c188b1121d584afa4adb31f3c2ea2853c4776bf9805efc3e9df21710
 EBUILD tornado-3.1.1.ebuild 1172 SHA256 e92da1b4531a1ad2ed1eef1269a0113f3e0f2c02e3d5a3f23bee69e7c1f4556b SHA512 800e283084fb709d89966aed2538751fcad053fc3ec69bbf1bb1e1c5c537f6a5ead7b2710f6859a4e68f8da8cd8290882bdbea934d2a8a0f0fa17ded1ea7d9b6 WHIRLPOOL 0bae37ae17aef4dd73df50255d90d8f9e6578460c8eab8a0a630cabfd56a96d79ec7bdce4af9d9311d2aa372247464d15c83eaa8ea9c613a71fca06ebd56308e
-MISC ChangeLog 5476 SHA256 74f1bbde43956202627dcb41d12e585f39cced7113004a1b0854db040c0e58a4 SHA512 034677c8711d7a908d9f2660e3d93188d6e001425aec8761cb8004913087d1331108606af7a869f7ff64c86e7bfbdd6b3f60b5c7dcfd86dc5f2b946f784d9e09 WHIRLPOOL 4b781dfe77d7d2d0a07bb31527214a476fc094ccbeba4b53cddb803445fc691fe6961edbc8700284980c92652e0c8f72aad2649630d47bb785846219897ab1f9
+EBUILD tornado-3.2.ebuild 1716 SHA256 335cc7a1c849ded131581f7744134f3ca0930527abc334cf853d36649d710cd9 SHA512 f091f0620bff38d2b478b4cafa64b1b6cc1062cdb63736b4aafbb0a218ea1411c987ca4b3d51415d8d4cc5fa7b7198fc5325d3afd23a25e7f66f7bee27d4c6d4 WHIRLPOOL 0f6fc56524156fb06a599bcf74b917977ef87b2707d6131b57c19d620c9ac6c66733f242466e428da4bcf50b93a31c627a90d58c0204919b24ca81917c1a3987
+MISC ChangeLog 5597 SHA256 0016e1b743ed52d490d6ba3e704fd47bbc5bc5132ace0e0809be52cf7bb26825 SHA512 5626be23e2532a0accc408e69939e6d38250f20e368f5475fa0621729f4716cbe8699233f80153dd14c185964e0df400c7655bd5d845ea0246dd3e96a9d9737c WHIRLPOOL 8d3f4cc52b7cab5a2503521d01414bb6bf62fa04c82abd4c5a3e545527f9e57c4c33a8ae04af301c4e6405c5adb9b569953026bc98b18e4172ad202243718828
 MISC metadata.xml 161 SHA256 54c4e6d783f2571466c7b03622195c255b95cf06209e59ab6653a6366cdfde6e SHA512 b306d222517e4eae525f6a79634f26eff2068f85911b7904c52c485a004d1d5401300808da67f9a1e3f102d65aebd1e0d21cd18145ea0bfec156f2aa3785b104 WHIRLPOOL f9c8e8d23bde25f4b14031f83dcc09e8437fdbcbb27199c1e9d8109fb2ccc7589cabf8240256dbbe6e080d04d2c444d115c66f82fc9b479e1e70d1ef0fe60fe2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQEcBAEBCAAGBQJTGnM4AAoJEIN+7RD5ejahU1sH/3/HOCjS+t/0gqstcGfeLIac
-/O9oTg7phsPfIjEU5Nn8lXoZv+MQNyb+jx0tlEdXnR4nipdRoGYSFkO4Ie4yI7cF
-xM//948y0u501eGmsDkuXiiT5KL2lVAm1uZxBuxM/Pxi1xep+mh1IFkPCH3vo1oF
-g/BcB/fwkY1/ZW29rqkFQrrpLPspWQz6Fhu1L9MCMZgZ/bTr5BXofy+7BrKTP7vy
-1WMgy4cbzUrAkZC2edaCMegfJmpGslJhnRr8LTHhx0U0+5h8BSWSjOjhl8psWSch
-Vb/UdxFigaJiudvATefxKcuRmZj5yKqeJhKMLr3jphYqoKwW71j6NXNgj9hLGbQ=
-=9NFG
+iQEcBAEBCAAGBQJTGomxAAoJEIN+7RD5ejahnvwH/3OmKB7rC1cRWbmuDHpD0hR8
+6Rlr1461EyDbEtiFn82DDlMdo/yjR2WKwOKYMG2jZsUs6izpxJ4srdu8lPR6l+bV
+n+VcE6o9ZbiF72qSjK2GAALRFsg4uJ8wRWGfhW4gjcUhGyZrdU9cMVMtE0qRNDfu
+ptI5+Kavv4MVU2EWDQ2T7XqRvV7R+avXR9z40BA/RExG2NwjVfnJpUHBAaYJqFvz
+Y7C3kBw/qmUYhDO9LPp/LXRJLnI9VQl5PbDfoDfgHt29OjRXQz/Qmcx4R/vbQGyn
+fWzLrUJulB74/R4l6yjr84B6Ggq+8FITrPN8DPwXKdNob7B8xEzuRZNwPt4snWw=
+=k47p
 -----END PGP SIGNATURE-----
